resolved the error with the implementation of LoginForm.jsx

--- a/src/App.css
+++ b/src/App.css
@@ -16,19 +16,35 @@ Lightest
 */
 
 body{
-  background-color: #5254d8;
+  background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
+
+
 .auth-container {
   display: flex;
-  flex-direction: column; 
-  align-items: center;    
-  width: fit-content;    
-  max-width: 400px;       
-  margin: 200px auto;  
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  max-width: 400px;
+  margin: 200px auto;
   padding: 50px;
-  background-color: #dddeff;
-  border-radius: 12px;
-  box-shadow: 0px 0px 20px 0px rgb(57, 57, 57);
+  background: rgba(255, 255, 255, 0.08);     
+  backdrop-filter: blur(20px) saturate(180%);
+  -webkit-backdrop-filter: blur(20px) saturate(180%);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 16px;
+  box-shadow: 0 0 25px rgba(0,0,0,0.3);
+}
+
+.app-container {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: transparent; 
+  backdrop-filter: none;   
 }
 
 .auth-container h2 {
@@ -58,21 +74,25 @@ body{
 }
 
 .auth-container button[type="submit"] {
-  width: 100%;
-  padding: 12px;
-  background-color: #5254d8;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-  font-weight: bold;
-  font-size: 20px;
+  width: 80%;
+	height: 40px;
+	margin: 10px auto;
+	justify-content: center;
+	display: block;
+	color: #fff;
+	background: #573b8a;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 30px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
 }
 
 .auth-container button[type="submit"]:hover {
-  background-color: #6668ea;
+  background: #6d44b8;
 }
 
 .auth-container p button {
@@ -147,7 +167,9 @@ body{
 .page-container {
   width: 670px;             
   min-height: 500px;
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.05);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
   margin: 60px auto;
   border-radius: 20px;
   padding: 20px;
@@ -165,7 +187,7 @@ body{
   margin-top: 100px;         
   margin-left: 30px;        
   font-size: 30px;          
-  color: #333;
+  color: #ffffff;
     font-family: 'Segoe UI', sans-serif; 
 }
 
@@ -200,7 +222,7 @@ body{
   transition: width 0.2s ease-in-out;
 }
 .nav-icons:hover{
-  width: 50px;
+  width: 43px;
 }
 
 .add-button {
@@ -231,7 +253,6 @@ body{
 
 .add-button:hover {
   transform: translateX(-50%) scale(1.12); 
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35); 
   background-color: #6668ea;                 
 }
 
@@ -291,7 +312,6 @@ body{
 
 .add-option-button:hover {
   transform: scale(1.12);             
-  box-shadow: 0px 0px 20px 2px #9597ff; 
   background-color: #6668ea;          
 }
 
