--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,6 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-
   background: transparent; 
   backdrop-filter: none;   
 }
@@ -50,7 +49,7 @@ body{
 .auth-container h2 {
   margin-bottom: 50px;
   font-size: 30px;
-  color: #5254d8;
+  color: #b4b5ff;
   font-family: 'Segoe UI', sans-serif;
 
 }
@@ -60,7 +59,7 @@ body{
   max-width: 400px;     
   padding: 12px 15px;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
+  border: 2px solid #b4b5ff;
   border-radius: 8px;
   font-size: 16px;
   outline: none;
@@ -70,7 +69,7 @@ body{
 }
 
 .auth-container input:focus {
-  border-color: #4a90e2;
+  border-color: #000000;
 }
 
 .auth-container button[type="submit"] {
@@ -79,8 +78,8 @@ body{
 	margin: 10px auto;
 	justify-content: center;
 	display: block;
-	color: #fff;
-	background: #573b8a;
+	color: #573b8a;
+	background: #b4b5ff;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 30px;
@@ -92,13 +91,13 @@ body{
 }
 
 .auth-container button[type="submit"]:hover {
-  background: #6d44b8;
+  background: #9092ec;
 }
 
 .auth-container p button {
   background: none;
   border: none;
-  color: #5254d8;
+  color: #b4b5ff;
   cursor: pointer;
   font-size: 14px;
   text-decoration: underline;
@@ -108,7 +107,7 @@ body{
 .auth-container p {
   margin-top: 15px;
   font-size: 14px;
-  color: #555;
+  color: #fff;
 }
 
 .auth-container p.error {
@@ -191,39 +190,12 @@ backdrop-filter: blur(5px);
     font-family: 'Segoe UI', sans-serif; 
 }
 
-.top-bar {
-  width: 100%;
-  height: 55px;                     
-  background-color: white;       
-  border-radius: 12px 12px 0 0;     
-  display: flex;
-  justify-content: space-between;   
-  align-items: center;
-  padding: 0 15px;
-  box-sizing: border-box;
-
-}
-
-.top-bar-button {
-  background: none;
-  border: none;
-  font-size: 26px;
-  color: white;                    
-  cursor: pointer;
-  margin-top: 40px;
-  padding: 10px;
-  border-radius: 10px;
-}
 
 
 
-.nav-icons{
-  width: 45px;
-  transition: width 0.2s ease-in-out;
-}
-.nav-icons:hover{
-  width: 43px;
-}
+
+
+
 
 .add-button {
   position: absolute;
