--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@ body{
     sans-serif;
 }
 
+html, body{
+  min-width: 720px;
+  overflow-x: auto;
+
+}
 
 .auth-container {
   display: flex;
@@ -167,8 +172,9 @@ body{
 
 
 .page-container {
-  width: 670px;             
-  min-height: 500px;
+  width: 90%;             
+  min-height: 620px;
+  max-width: 670px;
   background: rgba(255, 255, 255, 0.05);
 backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(5px);
