--- a/src/App.css
+++ b/src/App.css
@@ -172,23 +172,29 @@ html, body{
 
 
 .page-container {
-  width: 90%;             
-  min-height: 620px;
+  width: 90%;
   max-width: 670px;
+  min-height: 620px;
+  height: 900px;
+
   background: rgba(255, 255, 255, 0.05);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+
   margin: 60px auto;
   border-radius: 20px;
   padding: 20px;
   position: relative;
   box-shadow: 0 0 25px rgba(0,0,0,0.15);
-  height: 900px;
+
   display: flex;
   flex-direction: column;
-  align-items: center;
   box-sizing: border-box;
+
+  overflow-x: hidden;
 }
+
+
 
 .page-title {
   align-self: flex-start;   
@@ -240,24 +246,32 @@ backdrop-filter: blur(5px);
 
 
 .items-container {
-  display: flex;
-  overflow-x: auto;      
-  gap: 10px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px;
   padding: 10px;
-  scroll-snap-type: x mandatory;
+  box-sizing: border-box;
 }
 
 .product-card {
-  background-color: #fff;
+  width: 100%;
+  max-width: 100%;
+  margin: 10px;
+  box-sizing: border-box;
+
+  background-color: #222241;
   border-radius: 12px;
   padding: 12px 16px;
-  margin: 10px;
-  width: 220px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+
   display: flex;
   flex-direction: column;
   gap: 6px;
+
+  font-family: 'Segoe UI', sans-serif;
 }
+
 
 .product-name {
   font-size: 18px;
@@ -396,7 +410,7 @@ backdrop-filter: blur(5px);
 
 
 .product-card{
-  background-color: #f2f2ff;
+  background-color: #c9c9df;
   font-family: 'Segoe UI', sans-serif;
 
 }
