--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ Lightest
 */
 
 body{
-  background: linear-gradient(to bottom, #5254d8, #3a3c93, #24256a);
+background: linear-gradient(to bottom, #4b6cb7, #182848);
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     sans-serif;
 }
@@ -35,8 +35,7 @@ html, body{
   max-width: 400px;
   margin: 200px auto;
   padding: 50px;
-  background: rgba(255, 255, 255, 0.08);     
-  backdrop-filter: blur(20px) saturate(180%);
+  background: linear-gradient(135deg, rgba(58,60,147,0.2), rgba(58,60,147,0.05));
   -webkit-backdrop-filter: blur(20px) saturate(180%);
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 16px;
@@ -175,9 +174,9 @@ html, body{
   width: 90%;
   max-width: 670px;
   min-height: 620px;
-  background: rgba(255, 255, 255, 0.05);
+  background: rgba(75,108,183,0.15);
   backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   margin: 60px auto;
   border-radius: 20px;
   padding: 20px;
@@ -217,7 +216,7 @@ html, body{
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #5254d8;
+  background-color: #4b6cb7;
   color: white;
   font-size: 45px;
   border: none;
@@ -238,6 +237,7 @@ html, body{
 
 .add-button:hover {
   transform: translateX(-50%) scale(1.12);
+  background-color: #5e7fc5;
 }
 
 
@@ -257,11 +257,11 @@ html, body{
   max-width: 100%;
   margin: 10px;
   box-sizing: border-box;
-
-  background-color: #222241;
+  color: white;
+  background:  #5c79bc;
   border-radius: 12px;
   padding: 12px 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.25);
 
   display: flex;
   flex-direction: column;
@@ -285,7 +285,7 @@ html, body{
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  background-color: #5254d8;
+  background-color: #4b6cb7;
   color: white;
   font-size: 26px;
   border: none;
@@ -305,7 +305,7 @@ html, body{
 
 .add-option-button:hover {
   transform: scale(1.12);             
-  background-color: #6668ea;          
+  background-color: #5e7fc5;          
 }
 
 .add-options {
@@ -334,7 +334,7 @@ html, body{
   width: 85%;
   max-width: 380px;
 
-  background: #5254d8; 
+  background: linear-gradient(135deg, #4b6cb7, #182848);
   color: white; 
   border-radius: 18px;
   padding: 30px 25px; 
@@ -394,7 +394,7 @@ html, body{
   padding: 8px;
   border-radius: 12px;
   background-color: #fff;
-  color: #5254d8;
+  color: #4b6cb7;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -403,15 +403,11 @@ html, body{
 }
 
 .submit-btn:hover {
-  background-color: #eee;
+  background-color: #5e7fc5;
 }
 
 
-.product-card{
-  background-color: #c9c9df;
-  font-family: 'Segoe UI', sans-serif;
 
-}
 
 .product-menu {
   position: absolute;
@@ -422,7 +418,7 @@ html, body{
   flex-direction: column;
   width: 110px;
 
-  background: #dddeff;
+  background: #182848;
   border-radius: 10px;
   overflow: hidden;
 
@@ -472,15 +468,15 @@ html, body{
 
 .menu-btn.edit,
 .menu-btn.delete {
-  background: #24243e;       
-  color: #cacada; 
+  background: #2c3e75;       
+  color: #ffffff; 
   font-weight: bold;
   font-size: 15px;            
 }
 
 .menu-btn.edit:hover,
 .menu-btn.delete:hover {
-  background: #3d3d63;       
+  background: #3b5aa0;       
 }
 
 .menu-btn.delete {
@@ -495,12 +491,12 @@ html, body{
   cursor: pointer;
   font-weight: 900;
   font-size: 14px;
-  color: #5c5d9e;
-  background-color: #d9d9e5;
+  color: white;
+  background-color: #5c7ecb;
   box-shadow: 0px 0px 10px 2px #393a64;
 }
 .delete-option-btn.delete{
   
-  background-color: rgb(199, 115, 115);               
+  background-color: #c04545;               
   color: rgb(234, 227, 227);
 }
