--- a/src/App.css
+++ b/src/App.css
@@ -272,13 +272,21 @@ html, body{
 
 
 .product-name {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
+  align-self: center;
 }
 
 .product-price, .product-store, .product-barcode {
-  font-size: 14px;
-  color: #555;
+  font-size: 15px;
+  color: #ffffff;
+  align-self: center;
+}
+.product-price{
+  font-weight: 900;
+  background-color: #7e9ce2;
+  padding: 8px;
+  border-radius: 5px;
 }
 
 .add-option-button {
